--- a/src/css/style.css
+++ b/src/css/style.css
@@ -196,16 +196,16 @@ body {
 
 .content {
     color: #988580;
-    font-size: 8px;
+    font-size: 12px;
     max-height: 0;
     overflow: hidden;
-    transition: all 0.5s cubic-bezier(0,1,0,1);
+    transition: all 0.3s cubic-bezier(0,1,0,1);
 }
 
 .content.show {
     height: auto;
     max-height: 9999px;
-    transition: all 0.5s cubic-bezier(1,0,1,0);
+    transition: all 0.3s cubic-bezier(1,0,1,0);
 }
 
 .acc-endText {
@@ -216,12 +216,13 @@ body {
 /*wallet*/
 
 .pouch {
+    padding-top: 20px;
     display: flex;
     justify-content: space-between;
 }
 
 .balance {
-    font-size: 13px;
+    font-size: 19px;
     display: flex;
     align-items: self-end;
     border: 1px solid #663931;
@@ -235,7 +236,7 @@ body {
 }
 
 .wallet-address span {
-    font-size: 13px;
+    font-size: 19px;
     display: flex;
     align-items: self-end;
     border: 1px solid #663931;
@@ -243,34 +244,33 @@ body {
     border-radius: 10px;
     padding: 9px 8px 0 8px;
 }
-
-.wallet-address button {
-    margin: 0 15px;
-    font-size: 13px;
-    border: 1px solid #663931;
-    background: red;
-    border-radius: 50%;
-    padding: 10px;
+.delete-address {
+    display: flex;
+    align-items: center;
+}
+.delete-address img{
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
+    display: flex;
+    align-items: end;
 }
 
-.main-btns {
-    display: block;
+.wallet-btn, .wallet-btn2{
+    display: flex;
+    justify-content: center;
+    margin-top: 14vh;
 }
 
-.depozit {
-    padding: 8px 15px;
-    font-size: 25px;
-    border: 2px solid #663931;
-    background: green;
-    border-radius: 15px;
+.wallet-btn img {
+    width: 200px;
 }
-.withdraw {
-    padding: 8px 20px;
-    font-size: 25px;
-    border: 2px solid #663931;
-    background: green;
-    border-radius: 15px;
+
+.wallet-btn2 img {
+    width: 250px;
 }
+
+
 
 .box {
     width: 100%;
